--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,8 +1,15 @@
 {% extends "main/base.html" %}
 
 {% block content %}
-<div class="flex flex-col items-center justify-center">
-    <h1 class="bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 bg-clip-text text-transparent text-6xl font-bold inline-block">Willkommen beim Fototreff Dresden</h1>
-</div>
-    <p class="mt-8 text-2xl">Der Fototreff Dresden ist ein Zusammenschluss von Fotografen und Fotografinnen aus Dresden und Umgebung. Wir treffen uns regelmäßig zu Fototouren, Workshops und Stammtischen.</p>
+<section>
+    <div class="hero">
+        <div class="flex flex-col items-center justify-center">
+            <h1 class="bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 bg-clip-text text-transparent text-6xl font-bold inline-block">Willkommen beim Fototreff Dresden</h1>
+        </div>
+            <p class="mt-8 text-2xl">
+                Du bist es leid, alleine zu fotografieren? Dann bist du hier genau richtig! <br>
+                Wir sind eine Gruppe von Fotografen, die regelmäßig zusammenkommen, um gemeinsam zu fotografieren, sich auszutauschen und voneinander zu lernen.
+            </p>
+    </div>
+</section>
 {% endblock %}
