--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -12,24 +12,22 @@
 
     <header class="header z-10">
         <nav class="text-black">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="flex items-center justify-between h-16">
-                    <div class="flex items-center">
-                        <div class="flex-shrink-0">
-                            <a href="{% url 'index' %}" class="font-bold text-xl">Fototreff Dresden</a>
-                        </div>
+            <div class="bg-forange py-2 px-6">
+                <div class="container hidden justify-end space-x-4 md:block">
+                    <div class="flex justify-end space-x-4">
+                        {% if not user.is_authenticated %}
+                            <a href="{% url 'members:login' %}" class="font-medium text-sm uppercase">Mitglieder Login</a>
+                        {% endif %}
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'members:profile_edit' %}" class="font-medium text-sm uppercase">Profil</a>
+                            <a href="{% url 'members:logout' %}" class="font-medium text-sm uppercase">Abmelden</a>
+                        {% endif %}
                     </div>
-                    <div class="hidden md:block">
-                        <div class="ml-10 flex items-baseline space-x-4">
-                            <a href="{% url 'challenges:challenge_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Monatliche Foto-Challenges</a>
-                            <a href="{% url 'meetups:meetup_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Treffen</a>
-                            <a href="{% url 'members:member_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Mitglieder</a>
-                            {% if user.is_authenticated %}
-                            <a href="{% url 'members:profile_edit' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Profil</a>
-                            <a href="{% url 'members:logout' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Abmelden</a>
-                            {% endif %}
-                        </div>
-                    </div>
+                </div>
+                <div class="container flex justify-between items-center">
+                    <a href="{% url 'index' %}" class="items-center flex md:hidden">
+                        <img src="/static/images/logo.png" class="w-1/6 h-auto">
+                    </a>
                     <div class="flex md:hidden">
                         <button id="mobile-menu-button" class="text-gray-400 hover:text-white focus:outline-none focus:text-white">
                             <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
@@ -39,28 +37,43 @@
                     </div>
                 </div>
             </div>
-            <div id="mobile-menu" class="hidden md:hidden">
-                <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                    <a href="{% url 'challenges:challenge_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Monatliche Foto-Challenges</a>
-                    <a href="{% url 'meetups:meetup_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Treffen</a>
-                    <a href="{% url 'members:member_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mitglieder</a>
-                    {% if user.is_authenticated %}
+            <div class="bg-fblue mx-auto w-full pb-12 hidden md:block">
+                <div>
+                    <a href="{% url 'index' %}" class="flex items-center justify-center">
+                        <img src="/static/images/logo.png" class="w-1/6 h-auto mt-2">
+                    </a>
+                </div>
+            </div>
+            <div class="relative -mt-6 hidden md:block mx-auto md:max-w-3/5 lg:max-w-3/4 bg-fgreen rounded-2xl py-1">
+                <div class="flex items-baseline justify-center space-x-4 uppercase">
+                    <a href="{% url 'challenges:challenge_list' %}" class="text-fgray hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Monatliche Foto-Challenges</a>
+                    <a href="{% url 'meetups:meetup_list' %}" class="text-fgray hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Treffen</a>
+                    <a href="{% url 'members:member_list' %}" class="text-fgray hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Mitglieder</a>
+                </div>
+            </div>
+            <div id="mobile-menu" class="hidden md:hidden bg-forange px-2 pt-2 pb-3 space-y-1 sm:px-3">
+                <a href="{% url 'challenges:challenge_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Monatliche Foto-Challenges</a>
+                <a href="{% url 'meetups:meetup_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Treffen</a>
+                <a href="{% url 'members:member_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mitglieder</a>
+                {% if not user.is_authenticated %}
+                    <a href="{% url 'members:login' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mitglieder Login</a>
+                {% endif %}
+                {% if user.is_authenticated %}
                     <a href="{% url 'members:profile_edit' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Profil</a>
                     <a href="{% url 'members:logout' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Abmelden</a>
-                    {% endif %}
-                </div>
+                {% endif %}
             </div>
         </nav>
     </header>
 
     <!-- Main Content -->
-    <main class="container mx-auto px-12 pt-9 flex-grow">
+    <main class="mx-auto -mt-5 flex-grow">
         {% block content %}
         {% endblock %}
     </main>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-gray-200 mt-4">
+    <footer class="bg-forange text-gray-200 mt-4">
         <div class="container mx-auto p-4 flex justify-center items-center space-x-36">
             <div>
                 <ul class="space-y-2">
@@ -83,7 +96,6 @@
             </div>
         </div>
     </footer>
-
 
     <script>
         document.getElementById('mobile-menu-button').addEventListener('click', function() {
