--- a/members/templates/members/profile_edit.html
+++ b/members/templates/members/profile_edit.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+
     <div class="max-w-4xl mx-auto py-6 sm:px-6 lg:px-8">
         <div class="overflow-hidden shadow-sm sm:rounded-lg">
             <div class="p-6 border-gray-200">
@@ -72,7 +73,7 @@
                         </div>
                     </div>
                     <div class="mt-6">
-                        <button type="submit" class="bg-gray-800 text-white px-4 py-2 rounded-md hover:bg-gray-700">Speichern</button>
+                        <button type="submit" class="bg-forange gray-800 text-white px-4 py-2 rounded-md hover:bg-gray-700">Speichern</button>
                     </div>
                 </form>
             </div>
