--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -8,11 +8,11 @@
     <script src="https://kit.fontawesome.com/54f7ea8559.js" crossorigin="anonymous"></script>
     <link href="{% static 'css/output.css' %}" rel="stylesheet">
 </head>
-<body class="bg-gray-900 text-white flex flex-col min-h-screen">
+<body class="bg-fblue flex flex-col min-h-screen">
 
     <header class="header z-10">
         <nav class="text-black">
-            <div class="bg-forange py-2 px-6">
+            <div class="md:bg-forange py-4 md:py-2 pl-6 pr-2 md:px-6 bg-fblue">
                 <div class="container hidden justify-end space-x-4 md:block">
                     <div class="flex justify-end space-x-4">
                         {% if not user.is_authenticated %}
@@ -24,12 +24,15 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="container flex justify-between items-center">
+                <div class="container flex justify-around items-center">
                     <a href="{% url 'index' %}" class="items-center flex md:hidden">
-                        <img src="/static/images/logo.png" class="w-1/6 h-auto">
+                        <img src="/static/images/skyline_einzeln.jpg" class="w-2/4 h-auto">
                     </a>
+                    <div class="md_hidden mx-auto">
+                        <img src="/static/images/schriftzug_einzeln.jpg" class="w-2/4 h-auto mt-2 md:hidden">
+                    </div>
                     <div class="flex md:hidden">
-                        <button id="mobile-menu-button" class="text-gray-400 hover:text-white focus:outline-none focus:text-white">
+                        <button id="mobile-menu-button" class="text-fgray hover:text-white focus:outline-none focus:text-white">
                             <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
                             </svg>
@@ -51,23 +54,32 @@
                     <a href="{% url 'members:member_list' %}" class="text-fgray hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Mitglieder</a>
                 </div>
             </div>
-            <div id="mobile-menu" class="hidden md:hidden bg-forange px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                <a href="{% url 'challenges:challenge_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Monatliche Foto-Challenges</a>
-                <a href="{% url 'meetups:meetup_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Treffen</a>
-                <a href="{% url 'members:member_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mitglieder</a>
-                {% if not user.is_authenticated %}
-                    <a href="{% url 'members:login' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mitglieder Login</a>
-                {% endif %}
-                {% if user.is_authenticated %}
-                    <a href="{% url 'members:profile_edit' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Profil</a>
-                    <a href="{% url 'members:logout' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Abmelden</a>
-                {% endif %}
+            <div id="mobile-menu" class="fixed top-0 right-0 h-full w-full bg-fblue transform translate-x-full transition-transform duration-300 ease-in-out z-20">
+                <div class="flex justify-between items-center p-4">
+                    <button id="mobile-menu-close" class="text-fgray hover:text-white focus:outline-none focus:text-white">
+                        <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 text-fgray">
+                    <a href="{% url 'challenges:challenge_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Monatliche Foto-Challenges</a>
+                    <a href="{% url 'meetups:meetup_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Treffen</a>
+                    <a href="{% url 'members:member_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mitglieder</a>
+                    {% if not user.is_authenticated %}
+                        <a href="{% url 'members:login' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mitglieder Login</a>
+                    {% endif %}
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'members:profile_edit' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Profil</a>
+                        <a href="{% url 'members:logout' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Abmelden</a>
+                    {% endif %}
+                </div>
             </div>
         </nav>
     </header>
 
     <!-- Main Content -->
-    <main class="mx-auto -mt-5 flex-grow">
+    <main class="text-fgray mx-auto -mt-5 flex-grow">
         {% block content %}
         {% endblock %}
     </main>
@@ -100,11 +112,14 @@
     <script>
         document.getElementById('mobile-menu-button').addEventListener('click', function() {
             var menu = document.getElementById('mobile-menu');
-            if (menu.classList.contains('hidden')) {
-                menu.classList.remove('hidden');
-            } else {
-                menu.classList.add('hidden');
-            }
+            menu.classList.toggle('translate-x-full');
+            menu.classList.toggle('translate-x-0');
+        });
+
+        document.getElementById('mobile-menu-close').addEventListener('click', function() {
+            var menu = document.getElementById('mobile-menu');
+            menu.classList.toggle('translate-x-full');
+            menu.classList.toggle('translate-x-0');
         });
     </script>
 </body>
