--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -2,14 +2,15 @@
 
 {% block content %}
     <div class="hero">
-        <img src="static/images/hero.jpg" alt="Hero Image" class="w-full h-auto object-cover">
+        <img src="static/images/hero1.jpg" alt="Hero Image" class="w-full h-auto object-cover">
     </div>
-    <div class="bg-fblue text-fgray pt-12">
+    <div class="bg-fblue text-fgray pt-12 pb-16">
         <div class="mx-24 grid grid-cols-1 md:grid-cols-2 gap-12">
-            <div class="">
+            <div>
                 <h2 class="text-3xl font-normal text-white uppercase">Herzlich Willkommen</h2>
                 
-                <p class="text-white font-light mt-8">Herzlich willkommen in unserer Fototreff-Gruppe Dresden!
+                <p class="text-white font-light mt-8">
+                    Herzlich willkommen in unserer Fototreff-Gruppe Dresden!
                     Wir freuen uns sehr, dich in unserer Gemeinschaft von Hobbyfotografen begrüßen zu dürfen. Bei
                     unseren regelmäßigen Treffen haben wir die Gelegenheit, gemeinsam auf Fototour zu gehen, uns
                     auszutauschen und voneinander zu lernen. <br> <br>
@@ -23,9 +24,64 @@
                     Dein Fototreff-Team Dresden
                 </p>
             </div>
-            <div class="">
+            <div>
+                <h2 class="text-3xl font-normal text-white uppercase">Tritt unserem Verein bei</h2>
+                <p class="text-white font-light mt-8">Du bist herzlich eingeladen, Mitglied zu werden. Wir freuen uns über jedes neue Gesicht. Als Mitglied kannst du an unseren Foto-Challenges teilnehmen und an unseren Fotowalks teilnehmen.</p>
+                <h3 class="text-2xl font-normal text-white uppercase mt-8">Unsere neuesten Mitglieder:</h3>
+                <div class="flex justify-start items-center gap-4 mt-8">
+                    {% for user in newest_users %}
+                        <div class="text-center">
+                            {% if user.picture %}
+                                <img src="{{ user.picture.url }}" alt="{{ user.full_name }}" class="w-24 h-24 rounded-full mx-auto">
+                            {% else %}
+                                <img src="static/images/default_profile.png" alt="Default Profile Picture" class="w-24 h-24 rounded-full mx-auto">
+                            {% endif %}
+                            <p class="text-white mt-2">{{ user.full_name }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
+                <div class="mt-8">
+                    <a href="https://discord.gg/PG3jDR7Kh7" class="bg-forange py-2 px-4 rounded-lg hover:text-white font-light">Tritt unserem Discrod Server bei</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-fgreen text-fgray pt-12">
+        <div class="mx-24 grid grid-cols-1 md:grid-cols-2 gap-12">
+            <div>
+                <h2 class="text-3xl font-normal text-white uppercase">Herzlich Willkommen</h2>
+                
+                <p class="text-white font-light mt-8">
+                    Herzlich willkommen in unserer Fototreff-Gruppe Dresden!
+                    Wir freuen uns sehr, dich in unserer Gemeinschaft von Hobbyfotografen begrüßen zu dürfen. Bei
+                    unseren regelmäßigen Treffen haben wir die Gelegenheit, gemeinsam auf Fototour zu gehen, uns
+                    auszutauschen und voneinander zu lernen. <br> <br>
+                    Auf unserem Discord-Server sind wir ebenfalls aktiv: Hier veröffentlichen wir unsere neuesten
+                    Bilder, veranstalten monatliche Challenges und diskutieren leidenschaftlich über technische
+                    Details und Tipps rund um die Fotografie. Egal ob du Anfänger bist oder schon seit Jahren
+                    fotografierst - bei uns ist jeder willkommen, der die Freude am Fotografieren teilt. <br> <br>
+                    Lass uns gemeinsam die Schönheit Dresdens durch unsere Kameralinsen entdecken und
+                    festhalten. Wir freuen uns auf viele inspirierende Momente und kreative Fotos mit dir! <br> <br>
+                    Herzliche Grüße, <br>
+                    Dein Fototreff-Team Dresden
+                </p>
+            </div>
+            <div>
                 <h2 class="text-3xl font-normal text-white uppercase">Unsere neuesten Mitglieder</h2>
                 <p class="text-white">Du bist herzlich eingeladen, Mitglied zu werden. Wir freuen uns über jedes neue Gesicht. Als Mitglied kannst du an unseren Foto-Challenges teilnehmen und an unseren Fotowalks teilnehmen.</p>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8">
+                    {% for user in newest_users %}
+                        <div class="text-center">
+                            {% if user.picture %}
+                                <img src="{{ user.picture.url }}" alt="{{ user.full_name }}" class="w-24 h-24 rounded-full mx-auto">
+                            {% else %}
+                                <img src="static/images/default_profile.png" alt="Default Profile Picture" class="w-24 h-24 rounded-full mx-auto">
+                            {% endif %}
+                            <p class="text-white mt-2">{{ user.full_name }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
