--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <div class="bg-fgreen text-fgray pt-12">
+    <div class="bg-fgreen-600 text-fgray pt-12">
         <div class="mx-24 grid grid-cols-1 md:grid-cols-2 gap-12">
             <div>
                 <h2 class="text-3xl font-normal text-white uppercase">Herzlich Willkommen</h2>
