--- a/members/templates/members/member_detail.html
+++ b/members/templates/members/member_detail.html
@@ -1,8 +1,8 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="mx-auto w-full max-w-4xl">
-    <div class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
+<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto w-full max-w-4xl">
+    <div class="shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <h1 class="text-2xl font-bold mb-4">{{ member.full_name }}</h1>
         <img src="{{ member.picture.url }}" alt="{{ profile.full_name }}" class="w-48 h-48 object-fit rounded-sm mb-4">
         
