--- a/members/templates/members/member_list.html
+++ b/members/templates/members/member_list.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="mx-auto w-full max-w-4xl">
+<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto w-full max-w-4xl">
     <div class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <h1 class="text-2xl font-bold mb-4 text-center">List of Members</h1>
         
