--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -51,7 +51,7 @@
                 <div class="flex items-baseline justify-center space-x-4 uppercase">
                     <div class="relative group">
                         <a href="#" class="text-fgray-50 hover:bg-fgreen-500 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Challenges</a>
-                        <div class="absolute left-0 w-full bg-fgreen-600 mt-2 rounded-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                        <div class="absolute left-0 w-full bg-fgreen-600 rounded-b-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-opacity duration-300 pointer-events-none group-hover:pointer-events-auto">
                             <a href="{% url 'challenges:challenge_list' %}" class="text-fgray-50 block px-4 py-2 text-sm text-fgray hover:bg-fgreen-500 hover:text-white">Foto Challenges</a>
                             <a href="{% url 'editing_list' %}" class="text-fgray-50 block px-4 py-2 text-sm text-fgray hover:bg-fgreen-500 hover:text-white">Editing Challenges</a>
                         </div>
