--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -41,7 +41,7 @@
                     {% endfor %}
                 </div>
                 <div class="mt-8">
-                    <a href="https://discord.gg/PG3jDR7Kh7" class="bg-forange py-2 px-4 rounded-lg hover:text-white font-light">Tritt unserem Discrod Server bei</a>
+                    <a href="https://discord.gg/PG3jDR7Kh7" class="bg-forange-300 py-2 px-4 rounded-lg hover:text-white font-light">Tritt unserem Discrod Server bei</a>
                 </div>
             </div>
         </div>
