--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -56,7 +56,7 @@
                             <a href="{% url 'editing_list' %}" class="text-fgray-50 block px-4 py-2 text-sm text-fgray hover:bg-fgreen-500 hover:text-white">Editing Challenges</a>
                         </div>
                     </div>
-                    <a href="{% url 'meetups:meetup_list' %}" class="text-fgray-50 hover:bg-fgreen-500 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Treffen</a>
+                    <a href="{% url 'meetup_list' %}" class="text-fgray-50 hover:bg-fgreen-500 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Treffen</a>
                     <a href="{% url 'members:member_list' %}" class="text-fgray-50 hover:bg-fgreen-500 hover:text-white px-3 py-2 rounded-md text-sm font-normal">Mitglieder</a>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                             <a href="{% url 'editing_list' %}" class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Editing Challenges</a>
                         </div>
                     </div>
-                    <a href="{% url 'meetups:meetup_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Treffen</a>
+                    <a href="{% url 'meetup_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Treffen</a>
                     <a href="{% url 'members:member_list' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mitglieder</a>
                     {% if not user.is_authenticated %}
                         <a href="{% url 'members:login' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Mitglieder Login</a>
