--- a/members/templates/members/login.html
+++ b/members/templates/members/login.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html'%}
 
 {% block content %}
-<div class="w-full max-w-xs mx-auto">
+<div class="bg-fgreen-800 rounded-lg w-full max-w-xs mx-auto mt-12">
     <form method="post" class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
         {% csrf_token %}
         <div class="mb-4">
@@ -17,7 +17,7 @@
             <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" name="password" required>
         </div>
         <div class="flex items-center justify-between">
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+            <button class="bg-forange-300 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
                 Einloggen
             </button>
         </div>
