--- a/members/templates/members/profile_edit.html
+++ b/members/templates/members/profile_edit.html
@@ -83,7 +83,7 @@
             <div class="bg-fgreen-800 p-4 rounded-lg">
                 <h2 class="text-3xl font-bold mb-4 text-white">Admin Panel</h2>
                 <ul class="text-fgray-950">
-                    <li><a href="{% url 'meetups:meetup_edit' %}" class="bg-forange-300 py-1 px-2 rounded-lg hover:text-fgray-950">Alle Meetups verwalten</a></li>
+                    <li><a href="{% url 'meetup_list_private' %}" class="bg-forange-300 py-1 px-2 rounded-lg hover:text-fgray-950">Alle Treffen verwalten</a></li>
                     <!-- Add more admin links as needed -->
                 </ul>
             </div>
